--- a/style.css
+++ b/style.css
@@ -1,38 +1,36 @@
-.navbar-brand{
+.navbar-brand {
     font-family: 'Times New Roman', Times, serif;
     font-size: 45px;
     color: #304438;
 }
 
-.btn{
+.btn {
     padding: 12px 50px;
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
     border-radius: 0;
 
-    
+
 }
 
-.btn{
+.btn {
     background-color: #222722;
     color: #fff
 }
 
-.btn-brand:hover{
-    border: 2px solid color #304438
-
-    ;
+.btn-brand:hover {
+    border: 2px solid color #304438;
 }
 
-.navbar .nav-link{
-font-family: 'Times New Roman', Times, serif;
-font-size: 18px;
-color: #0d3b1f;
-text-transform: uppercase;
+.navbar .nav-link {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    color: #0d3b1f;
+    text-transform: uppercase;
 
 }
 
-#banner{
+#banner {
     background: url('Rann.jpg');
     height: 90vh;
     background-size: cover;
@@ -41,19 +39,19 @@ text-transform: uppercase;
 
 }
 
-#banner h1{
+#banner h1 {
     font-family: 'Times New Roman', Times, serif;
     font-size: 50px;
     color: #ecebf1;
 }
 
-#banner p{
+#banner p {
     font-size: 20px;
     color: #080813;
 }
 
-section{
-    padding: 100px 0 ;
+section {
+    padding: 100px 0;
 }
 
 .card-image-top {
@@ -73,24 +71,29 @@ section{
     font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
 }
+
 #Rannille h2 {
     font-family: 'Times New Roman', Times, serif;
     font-size: 50px;
 }
 
-#about .ngee{
+#about .ngee {
     height: 80vh;
-    background: url(jumping-spider.jpg);
+    background: url(6.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-#about .eyyy{
+
+#about .eyyy {
     padding: 100px;
 }
-#about h2, #about h4 {
+
+#about h2,
+#about h4 {
     font-family: 'Times New Roman', Times, serif;
 }
+
 #about {
     background-color: #120553;
 }
@@ -146,7 +149,7 @@ section{
 
 }
 
-.accordion-button:not(.collapsed){
+.accordion-button:not(.collapsed) {
     background-color: #0d3b1f;
     color: #120553;
 
@@ -155,4 +158,49 @@ section{
 .accordion-button:hover {
     background-color: #080813;
     color: #fff;
+}
+
+footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #0d3b1f;
+}
+
+#footer ul.list-unstyled li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#footer ul.list-unstyled li:hover a {
+    color: brown(236, 151, 25);
+}
+
+@media screen and (max-width: 767px) {
+
+    h1 {
+        font-size: 40px;
+    }
+
+    #Rannille h2 {
+        font-size: 40px;
+    }
+
+    #Rannille .col-lg-3 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    #about .eyyy {
+        padding: 40px;
+    }
+
+    #about .ngee {
+        height: 300px;
+    }
+}
+
+#about {
+    overflow-x: hidden;
 }
